@@ -80,8 +80,8 @@
   <div id="frame-body">
     <div>You can specify the frame where the expression is executed. If you want to specify window.frames[1].frames[0] enter [1, 0] in the frame input field. However, this feature is limited by the same origin policy.</div>
     <dl>
-      <dt><label for="frame-expression">Frame</label></dt>
-      <dd><input type="text" id="frame-expression"></dd>
+      <dt><label for="frameid-expression">frameId</label></dt>
+      <dd><input type="text" id="frameid-expression"></dd>
     </dl>
   </div>
 </div>
